version/0.1/_sources/api/ansys/chemkin/core/batchreactors/batchreactor/index.rst.txt






The ``batchreactor.py`` module
==============================

.. py:module:: ansys.chemkin.core.batchreactors.batchreactor


Summary
-------


















.. py:currentmodule:: batchreactor
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.BatchReactors`
            - Generic Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenPressureBatchReactorFixedTemperature`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenPressureBatchReactorEnergyConservation`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenVolumeBatchReactorFixedTemperature`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenVolumeBatchReactorEnergyConservation`
            - Chemkin 0-D transient closed homogeneous reactor model.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> BatchReactors</api/ansys/chemkin/core/batchreactors/batchreactor/BatchReactors>
    <span class="nf nf-cod-symbol_class"></span> GivenPressureBatchReactorFixedTemperature</api/ansys/chemkin/core/batchreactors/batchreactor/GivenPressureBatchReactorFixedTemperature>
    <span class="nf nf-cod-symbol_class"></span> GivenPressureBatchReactorEnergyConservation</api/ansys/chemkin/core/batchreactors/batchreactor/GivenPressureBatchReactorEnergyConservation>
    <span class="nf nf-cod-symbol_class"></span> GivenVolumeBatchReactorFixedTemperature</api/ansys/chemkin/core/batchreactors/batchreactor/GivenVolumeBatchReactorFixedTemperature>
    <span class="nf nf-cod-symbol_class"></span> GivenVolumeBatchReactorEnergyConservation</api/ansys/chemkin/core/batchreactors/batchreactor/GivenVolumeBatchReactorEnergyConservation>









Description
-----------

Chemkin closed homogeneous reactor model.








