version/0.2/_sources/api/ansys/chemkin/core/batchreactors/batchreactor/index.rst.txt






The ``batchreactor.py`` module
==============================

.. py:module:: ansys.chemkin.core.batchreactors.batchreactor


Summary
-------


















.. py:currentmodule:: batchreactor
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.BatchReactors`
            - Generic Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenPressureBatchReactorFixedTemperature`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenPressureBatchReactorEnergyConservation`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenVolumeBatchReactorFixedTemperature`
            - Chemkin 0-D transient closed homogeneous reactor model.


          * - :py:obj:`~ansys.chemkin.core.batchreactors.batchreactor.GivenVolumeBatchReactorEnergyConservation`
            - Chemkin 0-D transient closed homogeneous reactor model.





    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~calculate_effective_activation_energy`
            - Estimate the effective reduced activation energy.









.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> BatchReactors</api/ansys/chemkin/core/batchreactors/batchreactor/BatchReactors>
    <span class="nf nf-cod-symbol_class"></span> GivenPressureBatchReactorFixedTemperature</api/ansys/chemkin/core/batchreactors/batchreactor/GivenPressureBatchReactorFixedTemperature>
    <span class="nf nf-cod-symbol_class"></span> GivenPressureBatchReactorEnergyConservation</api/ansys/chemkin/core/batchreactors/batchreactor/GivenPressureBatchReactorEnergyConservation>
    <span class="nf nf-cod-symbol_class"></span> GivenVolumeBatchReactorFixedTemperature</api/ansys/chemkin/core/batchreactors/batchreactor/GivenVolumeBatchReactorFixedTemperature>
    <span class="nf nf-cod-symbol_class"></span> GivenVolumeBatchReactorEnergyConservation</api/ansys/chemkin/core/batchreactors/batchreactor/GivenVolumeBatchReactorEnergyConservation>









Description
-----------

Chemkin closed homogeneous reactor model.







Module detail
-------------

.. py:function:: calculate_effective_activation_energy(initial_mixture: ansys.chemkin.core.mixture.Mixture, duration: float = 0.01, perturb: float = 0.02, model: str = 'CONV') -> tuple[float, float]

   Estimate the effective reduced activation energy.




